# sentimentnusa

./: .env.axiom  .env.example  .gitattributes  .gitignore  .opencode.json  AGENTS.md  ARCHITECTURE.md  README.md  app.py  opencode.json  pyproject.toml  requirements.txt
.agents/: CONTEXT-MANAGEMENT.md  DEBUGGING.md  PERFORMANCE.md  SECURITY.md  engineering.md  stack.md  workflow.md
.agents/skills/ai-integration/: SKILL.md
.agents/skills/deployment-patterns/: SKILL.md
.agents/skills/mcp-builder/: SKILL.md
.agents/skills/n8n-patterns/: SKILL.md
.agents/skills/project-design/: SKILL.md
.agents/templates/: ai-engineering-python.md  fullstack-ai-nextjs.md
.github/workflows/: deploy.yml
hf_deploy_reference/: .gitattributes  README.md
hf_deploy_reference/.github/workflows/: deploy.yml
models/models--w11wo--indonesian-roberta-base-sentiment-classifier/refs/: main
models/models--w11wo--indonesian-roberta-base-sentiment-classifier/snapshots/ac452dcb0f4966130bba44f4ee0013bb5d52c282/: config.json  merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
src/config/: settings.py
src/core/: preprocessor.py  scraper.py  sentiment_analyzer.py  visualizer.py
src/utils/: helpers.py
