[project]
name = "sentimentnusa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apify-client>=2.5.0",
    "charset-normalizer>=3.4.7",
    "gradio>=6.11.0",
    "idna>=3.11",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.5.1",
    "urllib3>=2.6.3",
    "wordcloud>=1.9.6",
]
